Edit login.html tag in hom.html

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -55,7 +55,7 @@
         <div class="row align-items-center justify-content-center">
 
           <div class="col-4">
-            <h1 class="m-0 site-logo"><a href="login">Login</a></h1>
+            <h1 class="m-0 site-logo"><a href="login.html">Login</a></h1>
           </div>
 
           <div class="col-8">
