--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -358,12 +358,12 @@
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4"> 
             <div class="blog_entry">
-              <a href="single.html"><img src="{% static 'website/images/blog_1.jpg' %}" alt="Image" class="img-fluid"></a>
+              <a href="qrform.html"><img src="{% static 'website/images/blog_1.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
-                <h3><a href="single.html">A small river named Duden flows by their place</a></h3>
+                <h3><a href="qrform.html">QR Form</a></h3>
                 <span class="date">April 25, 2019</span>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <p class="more"><a href="single.html">Read More</a></p>
+                <p>QR Form</p>
+                <p class="more"><a href="qrform.html">QR Application</a></p>
               </div>
             </div>
           </div>
