Edit QR Page Input Details

--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -21,39 +21,37 @@
 				<h2>INFOMATION</h2>
 				<p class="text-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et molestie ac feugiat sed. Diam volutpat commodo.</p>
 				<p class="text-2"><span>Eu ultrices:</span> Vitae auctor eu augue ut. Malesuada nunc vel risus commodo viverra. Praesent elementum facilisis leo vel.</p>
-				<div class="form-left-last">
-					<input type="submit" name="account" class="account" value="Have An Account">
-				</div>
 			</div>
 			<form class="form-detail" action="#" method="post" id="myform">
 				<h2>REGISTER FORM</h2>
 				<div class="form-group">
 					<div class="form-row form-row-1">
 						<label for="first_name">First Name</label>
-						<input type="text" name="first_name" id="first_name" class="input-text">
+						<input type="text" name="first_name" id="first_name" class="input-text" required>
 					</div>
 					<div class="form-row form-row-1">
 						<label for="last_name">Last Name</label>
-						<input type="text" name="last_name" id="last_name" class="input-text">
+						<input type="text" name="last_name" id="last_name" class="input-text" required>
 					</div>
 				</div>
 				<div class="form-row">
-					<label for="your_email">Your Email</label>
-					<input type="text" name="your_email" id="your_email" class="input-text" required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+					<label for="your_phone_num">Phone Number</label>
+					<input type="text" name="your_phone_num" id="your_phone_num" class="input-text" required>
 				</div>
+
 				<div class="form-group">
 					<div class="form-row form-row-1 ">
-						<label for="password">Password</label>
-						<input type="password" name="password" id="password" class="input-text" required>
+						<label for="temperature">Temperature</label>
+						<input type="text" name="temperature" id="temperature" class="input-text" required>
 					</div>
 					<div class="form-row form-row-1">
-						<label for="comfirm-password">Comfirm Password</label>
-						<input type="password" name="comfirm_password" id="comfirm_password" class="input-text" required>
+						<label for="puspose_of_visitation">Purpose of Visitation</label>
+						<input type="text" name="puspose_of_visitation" id="puspose_of_visitation" class="input-text" required>
 					</div>
 				</div>
 				<div class="form-checkbox">
 					<label class="container"><p>I agree to the <a href="#" class="text">Terms and Conditions</a></p>
-					  	<input type="checkbox" name="checkbox">
+					  	<input type="checkbox" name="checkbox" required>
 					  	<span class="checkmark"></span>
 					</label>
 				</div>
@@ -75,12 +73,6 @@
    		 	},
 		});
 		$( "#myform" ).validate({
-		  	rules: {
-			    password: "required",
-		    	comfirm_password: {
-		      		equalTo: "#password"
-		    	}
-		  	},
 		  	messages: {
 		  		first_name: {
 		  			required: "Please enter a firstname"
@@ -88,15 +80,14 @@
 		  		last_name: {
 		  			required: "Please enter a lastname"
 		  		},
-		  		your_email: {
-		  			required: "Please provide an email"
+		  		your_phone_num: {
+		  			required: "Please provide a phone number"
 		  		},
-		  		password: {
+		  		temperature: {
 	  				required: "Please enter a password"
 		  		},
-		  		comfirm_password: {
-		  			required: "Please enter a password",
-		      		equalTo: "Wrong Password"
+		  		puspose_of_visitation: {
+		  			required: "Please enter a password"
 		    	}
 		  	}
 		});
