Edit QR Form & Add personnel detail in models.py

--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -1,5 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
+
+
 <html>
 <head>
 	<meta charset="utf-8">
@@ -14,6 +16,8 @@
 	<!-- Main Style Css -->
     <link rel="stylesheet" href="{% static 'qrform/css/style.css' %}"/>
 </head>
+
+
 <body class="form-v4">
 	<div class="page-content">
 		<div class="form-v4-content">
@@ -22,7 +26,9 @@
 				<p class="text-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et molestie ac feugiat sed. Diam volutpat commodo.</p>
 				<p class="text-2"><span>Eu ultrices:</span> Vitae auctor eu augue ut. Malesuada nunc vel risus commodo viverra. Praesent elementum facilisis leo vel.</p>
 			</div>
-			<form class="form-detail" action="#" method="post" id="myform">
+
+
+			<form class="form-detail" action="{% url 'qrform' %}" method="POST" id="myform">
 				<h2>REGISTER FORM</h2>
 				<div class="form-group">
 					<div class="form-row form-row-1">
@@ -34,10 +40,13 @@
 						<input type="text" name="last_name" id="last_name" class="input-text" required>
 					</div>
 				</div>
+
+
 				<div class="form-row">
 					<label for="your_phone_num">Phone Number</label>
 					<input type="text" name="your_phone_num" id="your_phone_num" class="input-text" required>
 				</div>
+
 
 				<div class="form-group">
 					<div class="form-row form-row-1 ">
@@ -49,48 +58,27 @@
 						<input type="text" name="puspose_of_visitation" id="puspose_of_visitation" class="input-text" required>
 					</div>
 				</div>
+
+
 				<div class="form-checkbox">
 					<label class="container"><p>I agree to the <a href="#" class="text">Terms and Conditions</a></p>
 					  	<input type="checkbox" name="checkbox" required>
 					  	<span class="checkmark"></span>
 					</label>
 				</div>
+
+
 				<div class="form-row-last">
 					<input type="submit" name="register" class="register" value="Submit">
 				</div>
+
 			</form>
 		</div>
 	</div>
+
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
-	<script>
-		// just for the demos, avoids form submit
-		jQuery.validator.setDefaults({
-		  	debug: true,
-		  	success:  function(label){
-        		label.attr('id', 'valid');
-   		 	},
-		});
-		$( "#myform" ).validate({
-		  	messages: {
-		  		first_name: {
-		  			required: "Please enter a firstname"
-		  		},
-		  		last_name: {
-		  			required: "Please enter a lastname"
-		  		},
-		  		your_phone_num: {
-		  			required: "Please provide a phone number"
-		  		},
-		  		temperature: {
-	  				required: "Please enter a password"
-		  		},
-		  		puspose_of_visitation: {
-		  			required: "Please enter a password"
-		    	}
-		  	}
-		});
-	</script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+
+</body>
 </html>
