--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -1,7 +1,5 @@
 {% load static %}
 <!DOCTYPE html>
-
-
 <html>
 <head>
 	<meta charset="utf-8">
@@ -28,13 +26,15 @@
 			</div>
 
 
-			<form class="form-detail" action="{% url 'qrform' %}" method="POST" id="myform">
+			<form method="POST" class="form-detail" action="{% url 'qrform' %}" id="myform">
+			{% csrf_token %}
 				<h2>REGISTER FORM</h2>
 				<div class="form-group">
 					<div class="form-row form-row-1">
 						<label for="first_name">First Name</label>
 						<input type="text" name="first_name" id="first_name" class="input-text" required>
 					</div>
+
 					<div class="form-row form-row-1">
 						<label for="last_name">Last Name</label>
 						<input type="text" name="last_name" id="last_name" class="input-text" required>
@@ -53,6 +53,7 @@
 						<label for="temperature">Temperature</label>
 						<input type="text" name="temperature" id="temperature" class="input-text" required>
 					</div>
+
 					<div class="form-row form-row-1">
 						<label for="puspose_of_visitation">Purpose of Visitation</label>
 						<input type="text" name="puspose_of_visitation" id="puspose_of_visitation" class="input-text" required>
@@ -75,10 +76,5 @@
 			</form>
 		</div>
 	</div>
-
-	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
-
 </body>
 </html>
