Edit home page & add qrform.py

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -143,8 +143,8 @@
                 <img src="{% static 'website/images/flaticon/svg/002-travel-1.svg' %}" alt="Image" class="img-fluid">
               </div>
               <div class="service-about">
-                <h3>Content Marketing</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3>Business Solutions</h3>
+                <p>Social robots like Pepper and Furhat are a very effective way of engaging and interacting with people and help them connect with your business.</p>
               </div>
             </div>
           </div>
@@ -155,8 +155,8 @@
                 <img src="{% static 'website/images/flaticon/svg/001-travel.svg' %}" alt="Image" class="img-fluid">
               </div>
               <div class="service-about">
-                <h3>Social Media Marketing</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3>Academic Solutions</h3>
+                <p>The growing numbers in robotics research is spearheading. We provide customized platform for researchers to explore high level research and offer programming and prototyping services.</p>
               </div>
             </div>
           </div>
@@ -167,8 +167,8 @@
                 <img src="{% static 'website/images/flaticon/svg/003-travel-2.svg' %}" alt="Image" class="img-fluid">
               </div>
               <div class="service-about">
-                <h3>Brand &amp; Logo Design</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3>Industrial Solutions</h3>
+                <p>Using our high-end service robotics products, we provide a turnkey solution enable to solve industrial problems and provide added value to the clients.</p>
               </div>
             </div>
           </div>
@@ -179,8 +179,8 @@
                 <img src="{% static 'website/images/flaticon/svg/004-travel-3.svg' %}" alt="Image" class="img-fluid">
               </div>
               <div class="service-about">
-                <h3>Social Media Advertising</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3>Smart Traffic Solutions</h3>
+                <p>Robopreneur's Advance License Plate Recognition (RoboALPR) is designed from the ground up, using proprietary technologies developed by Robopreneur while being powered by the OpenALPR Engine.</p>
               </div>
             </div>
           </div>
@@ -191,20 +191,8 @@
                 <img src="{% static 'website/images/flaticon/svg/005-travel-4.svg' %}" alt="Image" class="img-fluid">
               </div>
               <div class="service-about">
-                <h3>Social Media Advertising</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="service d-flex h-100">
-              <div class="svg-icon">
-                <img src="{% static 'website/images/flaticon/svg/006-food.svg' %}" alt="Image" class="img-fluid">
-              </div>
-              <div class="service-about">
-                <h3>Web Design / Development</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3>COVID-19 Solutions</h3>
+                <p>Using robotics and AI technology, Robopreneur is automating critical tasks such as disinfection and body temperature screening process, indoor and outdoor, to minimize infection and lowering risks of people everywhere.</p>
               </div>
             </div>
           </div>
@@ -353,7 +341,7 @@
         <div class="row">
           
           <div class="col-12 mb-5 position-relative">
-            <h2 class="section-title text-center mb-5">Blog Posts</h2>
+            <h2 class="section-title text-center mb-5">Testing</h2>
           </div>
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4"> 
@@ -442,35 +430,35 @@
             </form>
           </div>
           <div class="col-lg-5">
-            <h3>London</h3>
+            <h3>---------------------------------------------</h3>
             <ul class="list-unstyled mb-5">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+                <span>---------------------------------------------</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
+                <span>---------------------------------------------</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <span>---------------------------------------------</span>
               </li>
             </ul>
 
-            <h3>New York</h3>
+            <h3>---------------------------------------------</h3>
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+                <span>---------------------------------------------</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
+                <span>---------------------------------------------</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <span>---------------------------------------------</span>
               </li>
             </ul>
           </div>
