Processeing web forms (QR Form upload to Django DB and POST to register.html)

--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -43,8 +43,8 @@
 
 
 				<div class="form-row">
-					<label for="your_phone_num">Phone Number</label>
-					<input type="text" name="your_phone_num" id="your_phone_num" class="input-text" required>
+					<label for="contact_number">Phone Number</label>
+					<input type="text" name="contact_number" id="contact_number" class="input-text" required>
 				</div>
 
 
@@ -55,8 +55,8 @@
 					</div>
 
 					<div class="form-row form-row-1">
-						<label for="puspose_of_visitation">Purpose of Visitation</label>
-						<input type="text" name="puspose_of_visitation" id="puspose_of_visitation" class="input-text" required>
+						<label for="purpose_of_visitation">Purpose of Visitation</label>
+						<input type="text" name="purpose_of_visitation" id="purpose_of_visitation" class="input-text" required>
 					</div>
 				</div>
 
