--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Services Free Template by Colorlib</title>
+    <title>RoboQR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -65,7 +65,7 @@
                 <li><a href="#about-section" class="nav-link">About</a></li>
                 <li><a href="#services-section" class="nav-link">Services</a></li>
                 <li><a href="#projects-section" class="nav-link">Projects</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
+                <li><a href="#blog-section" class="nav-link">Tests</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
@@ -82,7 +82,7 @@
     </header>
 
 
-    <div class="site-blocks-cover overlay bg-light" style="background-image: url({% static 'website/images/hero_bg_1.jpg' %});" id="home-section">
+    <div class="site-blocks-cover overlay bg-light" style="background-image: url({% static 'website/images/robo_bg_1.png' %});" id="home-section">
 
       <div class="container">
         <div class="row justify-content-center">
@@ -90,7 +90,7 @@
           <div class="col-12 text-center align-self-center text-intro">
             <div class="row justify-content-center">
               <div class="col-lg-8">
-                <h1 class="text-white" data-aos="fade-up" data-aos-delay="">We Are Digital Services</h1>
+                <h1 class="text-white" data-aos="fade-up" data-aos-delay="">Robo QR</h1>
                 <p class="lead text-white" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos magnam maxime voluptates libero, nobis impedit aut corrupti sunt possimus.</p>
                 <p data-aos="fade-up" data-aos-delay="200"><a href="#services-section" class="btn smoothscroll btn-primary">Our Services</a></p>
 
@@ -117,7 +117,7 @@
             <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
           </div>
           <div class="col-lg-4">
-            <img src="{% static 'website/images/about.jpg' %}" alt="Image" class="img-fluid">
+            <img src="{% static 'website/images/robo_about.jpg' %}" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-4">
             <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
@@ -215,87 +215,87 @@
         <div class="row justify-content-center mb-5" data-aos="fade">
           <div id="filters" class="filters text-center button-group col-md-7">
             <button class="btn btn-primary active" data-filter="*">All</button>
-            <button class="btn btn-primary" data-filter=".web">Web</button>
-            <button class="btn btn-primary" data-filter=".design">Design</button>
-            <button class="btn btn-primary" data-filter=".brand">Brand</button>
+            <button class="btn btn-primary" data-filter=".web">Produtcs</button>
+            <button class="btn btn-primary" data-filter=".design">Research</button>
+            <button class="btn btn-primary" data-filter=".brand">Solutions</button>
           </div>
         </div>  
 
         <div id="posts" class="row no-gutter">
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_5.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_products_1.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_5.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_products_1.png' %}">
             </a>
           </div>
 
           <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_6.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_solutions_1.jpg' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_6.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_solutions_1.jpg' %}">
             </a>
           </div>
 
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_7.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_products_2.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_7.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_products_2.png' %}">
             </a>
           </div>
 
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_1.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_products_4.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_1.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_products_4.png' %}">
             </a>
           </div>
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_2.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_products_3.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_2.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_products_3.png' %}">
             </a>
           </div>
 
           <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_3.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_solutions_2.jpg' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_3.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_solutions_2.jpg' %}">
             </a>
           </div>
 
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
 
-            <a href="{% static 'website/images/img_4.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_research_1.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_4.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_research_1.png' %}">
             </a>
 
           </div>
 
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_8.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_research_2.jpg' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_8.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_research_2.jpg' %}">
             </a>
           </div>
 
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_9.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_products_5.png' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_9.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_products_5.png' %}">
             </a>
           </div>
 
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_10.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_research_3.jpg' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_10.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_research_3.jpg' %}">
             </a>
           </div>
           <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="{% static 'website/images/img_11.jpg' %}" class="item-wrap fancybox">
+            <a href="{% static 'website/images/projects/robo_our_solutions_3.jpg' %}" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="{% static 'website/images/img_11.jpg' %}">
+              <img class="img-fluid" src="{% static 'website/images/projects/robo_our_solutions_3.jpg' %}">
             </a>
           </div>
 
@@ -346,7 +346,7 @@
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4"> 
             <div class="blog_entry">
-              <a href="qrform.html"><img src="{% static 'website/images/blog_1.jpg' %}" alt="Image" class="img-fluid"></a>
+              <a href="qrform.html"><img src="{% static 'website/images/robo_test_1.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="qrform.html">QR Form</a></h3>
                 <span class="date">April 25, 2019</span>
@@ -358,7 +358,7 @@
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <a href="single.html"><img src="{% static 'website/images/blog_2.jpg' %}" alt="Image" class="img-fluid"></a>
+              <a href="single.html"><img src="{% static 'website/images/robo_test_2.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="single.html">A small river named Duden flows by their place</a></h3>
                 <span class="date">April 25, 2019</span>
@@ -370,7 +370,7 @@
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <a href="single.html"><img src="{% static 'website/images/blog_3.jpg' %}" alt="Image" class="img-fluid"></a>
+              <a href="single.html"><img src="{% static 'website/images/robo_test_3.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="single.html">A small river named Duden flows by their place</a></h3>
                 <span class="date">April 25, 2019</span>
@@ -394,12 +394,10 @@
         <div class="row justify-content-between">
           <div class="col-lg-6">
             <form action="#" class="form">
+
               <div class="row mb-4">
-                <div class="form-group col-6">
-                  <input type="text" class="form-control" placeholder="First name">
-                </div>
-                <div class="form-group col-6">
-                  <input type="text" class="form-control" placeholder="Full name">
+                <div class="form-group col-12">
+                  <input type="email" class="form-control" placeholder="Full name">
                 </div>
               </div>
 
@@ -430,35 +428,19 @@
             </form>
           </div>
           <div class="col-lg-5">
-            <h3>---------------------------------------------</h3>
+            <h3>ROBOPRENEUR SDN BHD</h3>
             <ul class="list-unstyled mb-5">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>---------------------------------------------</span>
+                <span>Unit FC1-37 Block 1 Level 2, Futurise Centre, Persiaran APEC Cyber 8, Cyberjaya 63000, Selangor Malaysia</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>---------------------------------------------</span>
+                <span>+603-2726 2476</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>---------------------------------------------</span>
-              </li>
-            </ul>
-
-            <h3>---------------------------------------------</h3>
-            <ul class="list-unstyled">
-              <li class="mb-3">
-                <strong class="d-block mb-1">Address</strong>
-                <span>---------------------------------------------</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Phone</strong>
-                <span>---------------------------------------------</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Email</strong>
-                <span>---------------------------------------------</span>
+                <span>sales@robopreneur.com</span>
               </li>
             </ul>
           </div>
@@ -470,44 +452,35 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-3">
-            <h3 class="footer-title">Services</h3>
-            <p><span class="d-inline-block d-md-block">203 Fake St. Mountain View,</span> San Francisco, California, USA</p>
+            <h3 class="footer-title">Location</h3>
+            <p><span class="d-inline-block d-md-block">Unit FC1-37 Block 1 Level 2, Futurise Centre, Persiaran APEC, Cyber 8, Cyberjaya 63000, Selangor Malaysia</p>
           </div>
-          <div class="col-md-5 mx-auto">
+          <div class="col-md-5 mx-auto"> 
             <div class="row">
-              <div class="col-lg-4">
-                <h3 class="footer-title">Services</h3>
+              <div class="col">
+                <h3 class="footer-title">Company</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Content Marketing</a></li>
-                  <li><a href="#">Brand & Logo</a></li>
-                  <li><a href="#">Social Advertising</a></li>
+                  <li><a href="https://www.robopreneur.com/company-profile">Company Profile</a></li>
+                  <li><a href="https://www.robopreneur.com/our-services">Our Business</a></li>
+                  <li><a href="https://www.robopreneur.com/media-gallery">Media Gallery</a></li>
                 </ul>
               </div>
-              <div class="col-lg-4">
-                <h3 class="footer-title">Resources</h3>
+              <div class="col">
+                <h3 class="footer-title">Solutions</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Social Marketing</a></li>
-                  <li><a href="#">Web Design</a></li>
-                  <li><a href="#">Web Development</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4">
-                <h3 class="footer-title">Templates</h3>
-                <ul class="list-unstyled">
-                  <li><a href="#">Illustration</a></li>
-                  <li><a href="#">Video Editing</a></li>
-                  <li><a href="#">Copywriting</a></li>
+                  <li><a href="https://www.robopreneur.com/solutions-for-covid19">Covid-19 Solutions</a></li>
+                  <li><a href="https://www.robopreneur.com/artificialintelligence">AI Solutions</a></li>
+                  <li><a href="https://www.robopreneur.com/3d-printing-services">3D Printing Solutions</a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <h3 class="footer-title">Follow Me</h3>
-            <a href="#" class="social-circle m-2"><span class="icon-twitter"></span></a>
-            <a href="#" class="social-circle m-2"><span class="icon-facebook"></span></a>
-            <a href="#" class="social-circle m-2"><span class="icon-instagram"></span></a>
-            <a href="#" class="social-circle m-2"><span class="icon-dribbble"></span></a>
-            <a href="#" class="social-circle m-2"><span class="icon-linkedin"></span></a>
+            <h3 class="footer-title">Follow Us</h3>
+            <a href="https://www.youtube.com/channel/UCcItp4eaMU_hnYkacMkXVkA?view_as=subscriber" class="social-circle m-2"><span class="icon-youtube"></span></a>
+            <a href="https://www.facebook.com/robopreneurmy/" class="social-circle m-2"><span class="icon-facebook"></span></a>
+            <a href="https://www.instagram.com/robopreneur/" class="social-circle m-2"><span class="icon-instagram"></span></a>
+            <a href="https://www.linkedin.com/company/robopreneur/?originalSubdomain=my" class="social-circle m-2"><span class="icon-linkedin"></span></a>
           </div>
         </div>
 
