--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -352,12 +352,12 @@
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <a href="single.html"><img src="{% static 'website/images/robo_test_2.jpg' %}" alt="Image" class="img-fluid"></a>
+              <a href="register.html"><img src="{% static 'website/images/robo_test_2.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
-                <h3><a href="single.html">A small river named Duden flows by their place</a></h3>
+                <h3><a href="register.html">Register Database</a></h3>
                 <span class="date">April 25, 2019</span>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <p class="more"><a href="single.html">Read More</a></p>
+                <p>Register Database</p>
+                <p class="more"><a href="register.html">Register Database Application</a></p>
               </div>
             </div>
           </div>
