--- a/website/templates/dashboard_table.html
+++ b/website/templates/dashboard_table.html
@@ -256,24 +256,22 @@
                                         <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                             <thead>
                                                 <tr>
-                                                    <th>First Name</th>
-                                                    <th>Last Name</th>
+                                                    <th>Full Name</th>
                                                     <th>Contact Number</th>
                                                     <th>Temperature</th>
-                                                    <th>Purpose of Visitation</th>
                                                 </tr>
-                                            </thead>
-                                            
-                                            {% for member in members %}
-                                                <tr>
-                                                    <td>{{member.first_name}}</td>
-                                                    <td>{{member.last_name}}</td>
-                                                    <td>{{member.contact_number}}</td>
-                                                    <td>{{member.temperature}}</td>
-                                                    <td>{{member.purpose_of_visitation}}</td>
-                                                </tr>
-                                            {% endfor %}
 
+                                                <tbody>
+                                                {% for member in members %}
+                                                    <tr>
+                                                        <td>{{member.full_name}}</td>
+                                                        <td>{{member.contact_number}}</td>
+                                                        <td>{{member.temperature}}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                                </tbody>
+                                                
+                                            </thead>
                                         </table>
                                     </div>
                                 </div>
