Add time and date stamp to table

--- a/website/templates/dashboard_table.html
+++ b/website/templates/dashboard_table.html
@@ -259,6 +259,8 @@
                                                     <th>Full Name</th>
                                                     <th>Contact Number</th>
                                                     <th>Temperature</th>
+                                                    <th>Time</th>
+                                                    <th>Date</th>
                                                 </tr>
 
                                                 <tbody>
@@ -267,10 +269,12 @@
                                                         <td>{{member.full_name}}</td>
                                                         <td>{{member.contact_number}}</td>
                                                         <td>{{member.temperature}}</td>
+                                                        <td>{{member.time_stamp}}</td>
+                                                        <td>{{member.date_stamp}}</td>
                                                     </tr>
                                                 {% endfor %}
                                                 </tbody>
-                                                
+
                                             </thead>
                                         </table>
                                     </div>
