Database migration set phonenumber field to FloatField

--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -31,18 +31,18 @@
 				<h2>REGISTER FORM</h2>
 
 				<div class="form-row">
-					<label for="full_name">First Name</label>
+					<label for="full_name">Full Name</label>
 					<input type="text" name="full_name" id="full_name" class="input-text" required>
 				</div>
 
 				<div class="form-row">
 					<label for="contact_number">Phone Number</label>
-					<input type="text" name="contact_number" id="contact_number" class="input-text" required>
+					<input type="text" name="contact_number" id="contact_number" class="number" required>
 				</div>
 
 				<div class="form-row">
 					<label for="temperature">Temperature</label>
-					<input type="text" name="temperature" id="temperature" class="input-text" required>
+					<input type="text" name="temperature" id="temperature" class="number" required>
 				</div>
 
 				<div class="form-checkbox">
