--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -354,10 +354,10 @@
             <div class="blog_entry">
               <a href="home.html"><img src="{% static 'website/images/robo_test_2.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
-                <h3><a href="home.html">Home</a></h3>
+                <h3><a href="home.html">Register Company</a></h3>
                 <span class="date">April 25, 2019</span>
-                <p>Home</p>
-                <p class="more"><a href="home.html">Home</a></p>
+                <p>Register Company</p>
+                <p class="more"><a href="register.html">Register Company Application</a></p>
               </div>
             </div>
           </div>
