Change aesthetic of website

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -189,7 +189,7 @@
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div class="huge">12</div>
-                                            <div>New Tasks!</div>
+                                            <div>Daily Scans!</div>
                                         </div>
                                     </div>
                                 </div>
@@ -212,7 +212,7 @@
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div class="huge">124</div>
-                                            <div>New Orders!</div>
+                                            <div>Weekly Scans</div>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                         </div>
                                         <div class="col-xs-9 text-right">
                                             <div class="huge">13</div>
-                                            <div>Support Tickets!</div>
+                                            <div>Monthly Scans</div>
                                         </div>
                                     </div>
                                 </div>
@@ -250,6 +250,7 @@
                             </div>
                         </div>
                     </div>
+                    <a href="qrform.html"><img src="{% static 'website/images/robo_logo.png' %}" alt="Image" class="img-fluid"></a>
                 <!-- /.container-fluid -->
             </div>
             <!-- /#page-wrapper -->
