--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -56,8 +56,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li><a href="#about-section" class="nav-link">About</a></li>
-                <li><a href="#blog-section" class="nav-link">Tests</a></li>
+                <li><a href="#blog-section" class="nav-link">Application</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
@@ -82,9 +81,10 @@
           <div class="col-12 text-center align-self-center text-intro">
             <div class="row justify-content-center">
               <div class="col-lg-8">
-                <h1 class="text-white" data-aos="fade-up" data-aos-delay="">Robo QR</h1>
-                <p class="lead text-white" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos magnam maxime voluptates libero, nobis impedit aut corrupti sunt possimus.</p>
-                <p data-aos="fade-up" data-aos-delay="200"><a href="#services-section" class="btn smoothscroll btn-primary">Our Services</a></p>
+                <h1 class="text-white" data-aos="fade-up" data-aos-delay="">VTM</h1>
+                <p class="lead text-white" data-aos="fade-up" data-aos-delay="100">Visitor Temperature Managementby Robopreneur</p>
+                <p class="lead text-white" data-aos="fade-up" data-aos-delay="100">Another Innovation by Robopreneur</p>
+                <p data-aos="fade-up" data-aos-delay="200"><a href="login.html" class="btn smoothscroll btn-primary">Login</a></p>
 
               </div>
             </div>
@@ -94,39 +94,13 @@
       </div>
 
     </div>  
-
-
-    <div class="site-section" id="about-section">
-      <div class="container">
-        <div class="row ">
-          <div class="col-12 mb-4 position-relative">
-            <h2 class="section-title">About Us</h2>
-          </div>
-          <div class="col-lg-4">
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-            <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-          </div>
-          <div class="col-lg-4">
-            <img src="{% static 'website/images/robo_about.jpg' %}" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-lg-4">
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-            <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-          </div>
-          
-          
-        </div>
-      </div>
-    </div>
     
     <section class="site-section bg-light" id="blog-section">
       <div class="container">
         <div class="row">
           
           <div class="col-12 mb-5 position-relative">
-            <h2 class="section-title text-center mb-5">Testing</h2>
+            <h2 class="section-title text-center mb-5">Application</h2>
           </div>
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4"> 
@@ -134,7 +108,7 @@
               <a href="qrform.html"><img src="{% static 'website/images/robo_test_1.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="qrform.html">QR Form</a></h3>
-                <span class="date">April 25, 2019</span>
+                <span class="date"></span>
                 <p>QR Form</p>
                 <p class="more"><a href="qrform.html">QR Application</a></p>
               </div>
@@ -146,7 +120,7 @@
               <a href="home.html"><img src="{% static 'website/images/robo_test_2.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="home.html">Register Company</a></h3>
-                <span class="date">April 25, 2019</span>
+                <span class="date"></span>
                 <p>Register Company</p>
                 <p class="more"><a href="register.html">Register Company Application</a></p>
               </div>
@@ -158,7 +132,7 @@
               <a href="dashboard.html"><img src="{% static 'website/images/robo_test_3.jpg' %}" alt="Image" class="img-fluid"></a>
               <div class="p-4 bg-white">
                 <h3><a href="dashboard.html">Dashboard</a></h3>
-                <span class="date">April 25, 2019</span>
+                <span class="date"></span>
                 <p>Dashboard</p>
                 <p class="more"><a href="dashboard.html">Dashboard Application</a></p>
               </div>
