Fix QRForm Submit button

--- a/website/templates/qrform.html
+++ b/website/templates/qrform.html
@@ -55,7 +55,7 @@
 
 				<div class="form-row-last">
 					
-					<a type="submit" name="register" class="register" value="Submit" href="confirmation.html">Submit</a>
+					<input type="submit" name="register" class="register" value="Submit">
 				</div>
 
 
