--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -43,7 +43,7 @@
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
 
-                    <a class="navbar-brand" href="index.html">Startmin</a>
+                    <a class="navbar-brand" href="dashboard.html">Startmin</a>
 
                 </div>
 
@@ -138,7 +138,7 @@
                                 <a href="#"><img src="{% static 'website/images/robo_logo.png' %}" alt="Image" class="img-fluid"></a>
                             </li>
                             <li>
-                                <a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                                <a href="dashboard.html" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
 
                             </li>
 
