--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -81,7 +81,7 @@
           <div class="col-12 text-center align-self-center text-intro">
             <div class="row justify-content-center">
               <div class="col-lg-8">
-                <h1 class="text-white" data-aos="fade-up" data-aos-delay="">STARS Visitor Management System</h1>
+                <b><h1 class="text-white" data-aos="fade-up" data-aos-delay="">STARS Visitor Management System</h1>
                 <p class="lead text-white" data-aos="fade-up" data-aos-delay="100"></p>
                 <h2 class="lead text-white" data-aos="fade-up" data-aos-delay="100">Another Innovation by Robopreneur</h2>
                 <p data-aos="fade-up" data-aos-delay="200"><a href="login.html" class="btn smoothscroll btn-primary">Login</a></p>
